--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "social-network-api",
-  "version": "1.0.0",
-  "description": "Express.js for routing, a MongoDB database, and the Mongoose ODM.",
+  "name": "28-Stu_Mini-Project",
+  "version": "1.0.1",
+  "description": "Mongoose back-end project - Main",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "node index"
+    "start": "node index",
+    "dev": "nodemon index",
+    "seed": "node utils/seed",
+    "heroku-postbuild": "node utils/seed.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ShahnazAfreen9849/social-network-API.git"
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^7.0.2"
   },
-  "author": "Shahnaz Afreen",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ShahnazAfreen9849/social-network-API/issues"
-  },
-  "homepage": "https://github.com/ShahnazAfreen9849/social-network-API#readme"
+  "devDependencies": {
+    "nodemon": "^2.0.9"
+  }
 }
